WIP: Continue integrating Swagger
