# backend/docs/swagger.json
@@ -34,7 +34,36 @@
                 "tags": [
                     "files"
                 ],
-                "summary": "Deleting user's file"
+                "summary": "Deleting user's file",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "File to delete",
+                        "name": "filename",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
             }
         },
         "/files/load": {
@@ -65,7 +94,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseFailLoadFiles"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -88,7 +117,36 @@
                 "tags": [
                     "files"
                 ],
-                "summary": "Saving user's file"
+                "summary": "Saving user's file",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "File to upload",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseSuccessSaveFile"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
             }
         }
     },
@@ -104,12 +162,11 @@
                 }
             }
         },
-        "models.ResponseFailLoadFiles": {
+        "models.Response": {
             "type": "object",
             "properties": {
                 "message": {
-                    "type": "string",
-                    "example": "Unable to determine logged in user"
+                    "type": "string"
                 }
             }
         },
@@ -125,6 +182,18 @@
                 "message": {
                     "type": "string",
                     "example": "Files are loaded"
+                }
+            }
+        },
+        "models.ResponseSuccessSaveFile": {
+            "type": "object",
+            "properties": {
+                "filename": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Files is uploaded"
                 }
             }
         }
